# my_optee

./: README.md
buildroot/package/python3-pycryptodomex/: Config.in
firmware/: README.md
firmware/documentation/ilcomponents/: audio_capture.html  audio_decode.html  audio_encode.html  audio_lowpower.html  audio_mixer.html  audio_processor.html  audio_render.html  audio_splitter.html  camera.html  clock.html  egl_render.html  hvs.html  image_decode.html  image_encode.html  image_fx.html  index.html  isp.html  metadata.html  null_sink.html  prop.html  rawcam.html  resize.html  source.html  text_scheduler.html  transition.html  video_decode.html  video_encode.html  video_render.html  video_scheduler.html  video_splitter.html  visualisation.html
firmware/extra/: System.map  System7.map  dt-blob.dts
linux/drivers/tee/: tee_core.c  tee_shm.c
linux/include/linux/: tee_drv.h
optee_darknetz/: CMakeLists.txt  Makefile  README.md
optee_darknetz/darknetz/: Android.mk  CMakeLists.txt  Makefile
optee_darknetz/darknetz/ca/: Makefile  Makefile_original_bak
optee_darknetz/darknetz/ta/include/: user_ta_header_defines.h
optee_get_crl/: CMakeLists.txt  README.md
optee_get_crl/get_crl/: Android.mk  CMakeLists.txt  Makefile
optee_os/certs/: Makefile  ca_chain.crt
optee_os/crl/: crl.c  root.crl.pem
optee_os/keys/: .gitignore  ia.crt  ia.key  my.key  test_ia.crt  test_ia.key
optee_os/mk/: config.mk
optee_os/scripts/: sign_encrypt.py
optee_pic_server/: CMakeLists.txt  LICENSE  README.md
optee_pic_server/pic_server/: Android.mk  CMakeLists.txt
(+36 files in other folders)
